--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -14,11 +14,11 @@ jobs:
 
     services:
       mongo:
-        image: mongo:6
+        image: mongo:6.0
         ports:
           - 27017:27017
         options: >-
-          --health-cmd "mongo --eval 'db.adminCommand("ping")'"
+          --health-cmd "mongo --eval 'db.adminCommand({ ping: 1 })'"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
